@@ -1,3 +1,8 @@
+2008-09-22    <neal@bcn.boulder.co.us>
+
+	* makeauditunits.py: 
+	Separate "Early" from "Absentee", report both
+	
 2008-09-20    <neal@bcn.boulder.co.us>
 
 	* makeauditunits.py (make_audit_unit): 
